# github-multi-account-manager

./: .gitignore  .goreleaser.yml  BUBBLETEA_CONVERSION.md  LICENSE  QUICKSTART.md  README.md  TESTING.md  go.mod  go.sum  install.sh  pyproject.toml
.github/workflows/: release.yml
cmd/ghmm/: main.go
cmd/ghmm-cli/: main.go
ghmm/: __init__.py  cli.py  config.py  gitconfig.py  shell.py  ssh.py  tui.py
internal/config/: config.go  detect.go
internal/git/: git.go
internal/shell/: shell.go
internal/ssh/: ssh.go
internal/tui/: tui.go
